--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
       />
-    <title>shnfaqotcode LinkTree</title>
+    <title>Matz Portal✨</title>
   </head>
   <body>
     <div class="container animate__animated animate__zoomIn">
@@ -22,26 +22,26 @@
       <div class="profile">
         <img src="profile.gif" alt="error image" class="animate__animated
           animate__pulse animate__infinite" />
-        <p class="animate__animated animate__fadeInDownBig">ALBAR</p>
+        <p class="animate__animated animate__fadeInDownBig">Checkout There</p>
       </div>
 
       <!-- ganti link akun media sosil kalian  -->
       <div class="link">
         <a href="https://www.youtube.com/@SuhermanFaqot" target="_blank"
-          class="animate__animated animate__bounceInLeft">youtube</a>
+          class="animate__animated animate__bounceInLeft">Youtube</a>
         <a href="https://www.instagram.com/suherman_fqt" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-1s">instagram</a>
+          animate__bounceInLeft animate__delay-1s">Instagram</a>
         <a href="https://www.facebook.com/suherman.faqot.50/" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-2s">facebook</a>
+          animate__bounceInLeft animate__delay-2s">Facebook</a>
 	<a href="https://tutorialfaqot.blogspot.com/" target="_blank"
-          class="animate__animated animate__bounceInLeft animate__delay-3s">tiktok</a>
+          class="animate__animated animate__bounceInLeft animate__delay-3s">TikTok</a>
         
       </div>
 
       <!-- footer -->
       <div class="footer animate__animated animate__bounceInUp
         animate__delay-4s">
-        <a href="https://www.youtube.com/@SuhermanFaqot" > made suherman faqot</a>
+        <a href="https://www.youtube.com/@SuhermanFaqot" >©2024 Rama Rahmat.</a>
       </div>
     </div>
   </body>
