--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 				<a href="https://discord.gg/" target="_blank">DISCORD</a>
 				<a href="https://facebook.com/" target="_blank">FACEBOOK</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">YOUTUBE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">1. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">2. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">3. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">4. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">5. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">6. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">7. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">8. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">9. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">10. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">11. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">12. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">13. LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">14. LINK SHOPEE</a>
             </div>
 			<!----Footer---->
 			<div class="footer">
