--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<a href="https://instagram.com/" target="_blank">INSTAGRAM</a>
 				<a href="https://discord.gg/" target="_blank">DISCORD</a>
 				<a href="https://facebook.com/" target="_blank">FACEBOOK</a>
-				<a href="https://youtube.com/c/matzvanbuuren/" target="_blank">YOUTUBE</a>
+				<a href="https://youtube.com/@matzvanbuuren?si=aUqb801f5rxDHNjO" target="_blank">YOUTUBE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">1.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">2.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">3.LINK SHOPEE</a>
