--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
 			<!----Linktree Button--->
 			<div class="link">
-				<a href="https://instagram.com/" target="_blank">INSTAGRAM</a>
-				<a href="https://discord.gg/" target="_blank">DISCORD</a>
-				<a href="https://facebook.com/" target="_blank">FACEBOOK</a>
+				<a href="https://www.instagram.com/_nietmatz" target="_blank">INSTAGRAM</a>
+				<a href="https://discord.com/invite/DAQKdDcGhy" target="_blank">DISCORD</a>
+				<a href="facebook.com/people/Mas-Mamat/100080944236247/" target="_blank">FACEBOOK</a>
 				<a href="https://youtube.com/@matzvanbuuren?si=aUqb801f5rxDHNjO" target="_blank">YOUTUBE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">1.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">2.LINK SHOPEE</a>
