--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 		<title>Portal Matz ✨</title>
+		<link rel="icon" type="image/x-icon" href="https://chemicalsp4rk.github.io/linktree/shuriken.png">
 	</head>
 	<body>
 		<div class="container animate__animated animate__zoomIn">
