--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
 				<i>Created by Rama Rahmat.✨</i>
             </div>
 		</div>
+	    <script src="https://chemicalsp4rk.github.io/linktree/linktree2/script.js"></script>
 	</body>
 </html>
