--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 			<!----Footer---->
 			<div class="footer">
-				<i>Created by Rama Rahmat.✨</i>
+				<i>©2024 Created by Rama Rahmat.✨</i>
             </div>
 		</div>
 	    <script src="https://chemicalsp4rk.github.io/linktree/linktree2/script.js"></script>
