--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 				<a href="https://discord.com/invite/DAQKdDcGhy" target="_blank">DISCORD</a>
 				<a href="facebook.com/people/Mas-Mamat/100080944236247/" target="_blank">FACEBOOK</a>
 				<a href="https://youtube.com/@matzvanbuuren?si=aUqb801f5rxDHNjO" target="_blank">YOUTUBE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">1.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">2.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">3.LINK SHOPEE</a>
+				<a href="https://shp.ee/03smfsx" target="_blank">1.📱REALME 10 PRO 5G 256GB</a>
+				<a href="https://shp.ee/ernppa9" target="_blank">2.📱VIVO V27E 5G</a>
+				<a href="https://shp.ee/jdtwefs" target="_blank">3.🖥️PC RAKITAN RTX 9JUTAAN!</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">4.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">5.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">6.LINK SHOPEE</a>
