--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			<div class="link">
 				<a href="https://www.instagram.com/_nietmatz" target="_blank">INSTAGRAM</a>
 				<a href="https://discord.com/invite/DAQKdDcGhy" target="_blank">DISCORD</a>
-				<a href="facebook.com/people/Mas-Mamat/100080944236247/" target="_blank">FACEBOOK</a>
+				<a href="https://www.facebook.com/profile.php?id=100080944236247" target="_blank">FACEBOOK</a>
 				<a href="https://youtube.com/@matzvanbuuren?si=aUqb801f5rxDHNjO" target="_blank">YOUTUBE</a>
 				<a href="https://shp.ee/03smfsx" target="_blank">📱REALME 10 PRO 5G 256GB</a>
 				<a href="https://shp.ee/ernppa9" target="_blank">📱VIVO V27E 5G</a>
 				<a href="https://shp.ee/jdtwefs" target="_blank">🖥️PC RAKITAN RTX 9JUTAAN!</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">4.LINK SHOPEE</a>
+				<a href="https://www.facebook.com/profile.php?id=100094557400621" target="_blank">🪙TOPUP VALORANT ZENIX</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">5.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">6.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">7.LINK SHOPEE</a>
