--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="profile">
 				<img src="profile.gif" alt="error image" class="animate__animated animate__pulse animate__infinite"/>
 				<br>
-				<p class="animated_rainbow_1">Matz Portal 🖥️</p>
+				<p class="animated_rainbow_1">Matz Portal ✴️</p>
 				<jb>Link pembelian dibawah ini.</jb>
             </div>
 			<!----Linktree Button--->
