--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				<a href="https://shp.ee/ernppa9" target="_blank">📱VIVO V27E 5G</a>
 				<a href="https://shp.ee/jdtwefs" target="_blank">🖥️PC RAKITAN RTX 9JUTAAN!</a>
 				<a href="https://www.facebook.com/profile.php?id=100094557400621" target="_blank">🪙TOPUP VALORANT ZENIX</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">5.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">6.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">7.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">8.LINK SHOPEE</a>
+				<a href="https://shp.ee/wozr37b" target="_blank">📱 POCO X5 PRO 5G</a>
+				<a href="https://shp.ee/bf15m79" target="_blank">🖱️ LOGITECH G203 LIGHTSYNC</a>
+				<a href="https://shp.ee/q5rlw6e" target="_blank">🎧 HEADSET DBE GM190 BLACK | PINK</a>
+				<a href="https://shp.ee/pmzco8e" target="_blank">⌨️ KEYBOARD REXUS TKL BUNDLING 300K AN!</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">9.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">10.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">11.LINK SHOPEE</a>
