--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 				<a href="https://shp.ee/bf15m79" target="_blank">🖱️ LOGITECH G203 LIGHTSYNC</a>
 				<a href="https://shp.ee/q5rlw6e" target="_blank">🎧 HEADSET DBE GM190 BLACK | PINK</a>
 				<a href="https://shp.ee/pmzco8e" target="_blank">⌨️ KEYBOARD REXUS TKL BUNDLING 300K AN!</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">9.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">10.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">11.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">12.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">13.LINK SHOPEE</a>
+				<a href="https://shp.ee/5a6j36d" target="_blank">🖼️ POSTER ONEPIECE BOUNTY</a>
+				<a href="https://shp.ee/vkjq8z5" target="_blank">💻 MSI BRAVO RTX4050 9JUTAAN!</a>
+				<a href="https://shp.ee/5hdh146" target="_blank">🖥️ MONITOR MSI G2422C CURVED</a>
+				<a href="https://shp.ee/aj8sgpp" target="_blank">🎸 GITAR LISTRIK 700RB AN</a>
+				<a href="https://shp.ee/6na3i8z" target="_blank">🎚️AMPLI MINI MURAH</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">14.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">15.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">16.LINK SHOPEE</a>
@@ -60,7 +60,7 @@
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">31.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">32.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">33.LINK SHOPEE</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">34.LINK SHOPEE</a>
+				<a href="https://youtube.com/matzvanbuuren/" target="_blank">About Me!✨</a>
             </div>
 			<!----Footer---->
 			<div class="footer">
