--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<a href="https://shp.ee/5hdh146" target="_blank">🖥️ MONITOR MSI G2422C CURVED</a>
 				<a href="https://shp.ee/aj8sgpp" target="_blank">🎸 GITAR LISTRIK 700RB AN</a>
 				<a href="https://shp.ee/6na3i8z" target="_blank">🎚️AMPLI MINI MURAH</a>
-				<a href="https://youtube.com/matzvanbuuren/" target="_blank">14.LINK SHOPEE</a>
+				<a href="https://id.shp.ee/HhpasSK" target="_blank">💻HP VICTUS 15-RTX2050 RYZEN5 7000SERIES</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">15.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">16.LINK SHOPEE</a>
 				<a href="https://youtube.com/matzvanbuuren/" target="_blank">17.LINK SHOPEE</a>
